fix: -reparando un z-index que no dejaba darle click al modal de opciones de preguntas

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -7,6 +7,7 @@
   overflow: hidden;
   background: -webkit-linear-gradient(#e4e0ba, #f7d9aa);
   background: linear-gradient(#e4e0ba, #f7d9aa);
+  z-index: 1;
 }
 
 .world {
@@ -15,6 +16,7 @@
   width: 100%;
   height: 100%;
   touch-action: none;
+  z-index: 1;
 }
 
 .header {
